{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 173,
  "lineage": "97a086a7-7091-7ea7-fa25-ba68a24f2bdc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:355569235742:loadbalancer/app/mage-ai-production-alb/90c6572573258b92",
            "arn_suffix": "app/mage-ai-production-alb/90c6572573258b92",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mage-ai-production-alb-1705816082.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:355569235742:loadbalancer/app/mage-ai-production-alb/90c6572573258b92",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mage-ai-production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04a650840f908d39b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000831708b12596fc"
              },
              {
                "subnet_id": "subnet-0903fecbffa812350"
              }
            ],
            "subnets": [
              "subnet-000831708b12596fc",
              "subnet-0903fecbffa812350"
            ],
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-alb"
            },
            "vpc_id": "vpc-01981217d5bcb058f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:internet-gateway/igw-0d73554077a0e90aa",
            "id": "igw-0d73554077a0e90aa",
            "owner_id": "355569235742",
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-igw"
            },
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:355569235742:listener/app/mage-ai-production-alb/90c6572573258b92/dadd571547adba93",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:355569235742:targetgroup/mage-ai-production-tg/cf061f22aade8aca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:355569235742:listener/app/mage-ai-production-alb/90c6572573258b92/dadd571547adba93",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:355569235742:loadbalancer/app/mage-ai-production-alb/90c6572573258b92",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:355569235742:targetgroup/mage-ai-production-tg/cf061f22aade8aca",
            "arn_suffix": "targetgroup/mage-ai-production-tg/cf061f22aade8aca",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:355569235742:targetgroup/mage-ai-production-tg/cf061f22aade8aca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mage-ai-production-tg",
            "port": 6789,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-lb-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d73554077a0e90aa",
            "id": "r-rtb-0f760c82bf5d15a971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f760c82bf5d15a97",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:route-table/rtb-0f760c82bf5d15a97",
            "id": "rtb-0f760c82bf5d15a97",
            "owner_id": "355569235742",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-routing-table-public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e36e4ebcd76c50b7",
            "route_table_id": "rtb-0f760c82bf5d15a97",
            "subnet_id": "subnet-000831708b12596fc"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0ab547458382837",
            "route_table_id": "rtb-0f760c82bf5d15a97",
            "subnet_id": "subnet-0903fecbffa812350"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:security-group/sg-04a650840f908d39b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a650840f908d39b",
            "ingress": [
              {
                "cidr_blocks": [
                  "81.35.250.213/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "81.35.250.213/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240720184027289600000003",
            "name_prefix": "terraform-",
            "owner_id": "355569235742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mount_target_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:security-group/sg-0f0bd148b6ca0ce54",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f0bd148b6ca0ce54",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ba61fa7f04fd765"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20240720184032617000000005",
            "name_prefix": "terraform-",
            "owner_id": "355569235742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-efs-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_security_group.service_security_group",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:security-group/sg-037e970f507222d0e",
            "description": "mage-ai RDS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037e970f507222d0e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ba61fa7f04fd765"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mage-ai-production-rds-sg",
            "name_prefix": "",
            "owner_id": "355569235742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-production-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-production-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_security_group.service_security_group",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:security-group/sg-01ba61fa7f04fd765",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ba61fa7f04fd765",
            "ingress": [
              {
                "cidr_blocks": [
                  "81.35.250.213/32"
                ],
                "description": "",
                "from_port": 6789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a650840f908d39b"
                ],
                "self": false,
                "to_port": 6789
              }
            ],
            "name": "terraform-20240720184030142100000004",
            "name_prefix": "terraform-",
            "owner_id": "355569235742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-service-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:subnet/subnet-07dd5430b69d4c418",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dd5430b69d4c418",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355569235742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-private-subnet-1"
            },
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:subnet/subnet-06c8b04587537afa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c8b04587537afa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355569235742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-private-subnet-2"
            },
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:subnet/subnet-000831708b12596fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.32.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000831708b12596fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "355569235742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-public-subnet-1"
            },
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:subnet/subnet-0903fecbffa812350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.32.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0903fecbffa812350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "355569235742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-public-subnet-2"
            },
            "vpc_id": "vpc-01981217d5bcb058f"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355569235742:vpc/vpc-01981217d5bcb058f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-063b7720348697eba",
            "default_route_table_id": "rtb-0163f593af42aa38b",
            "default_security_group_id": "sg-05c44e1ecf9bb52fa",
            "dhcp_options_id": "dopt-008e5f89ac62f6b19",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01981217d5bcb058f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0163f593af42aa38b",
            "owner_id": "355569235742",
            "tags": {
              "Environment": "production",
              "Name": "mage-ai-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mage-ai-vpc"
            }
          }
        }
      ]
    }
  ]
}